--- a/src/components/pagination/index.html
+++ b/src/components/pagination/index.html
@@ -15,27 +15,10 @@
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <div class="pagination">
-      <div class="pagination__arrow"></div>
-        <ul class="pagination__list">
-          <li class="pagination__list-item">1</li>
-          <li class="pagination__list-item">2</li>
-          <li class="pagination__list-item">3</li>
-          <li class="pagination__list-item">4</li>
-          <li class="pagination__list-item">5</li>
-          <li class="pagination__list-item">6</li>
-          <li class="pagination__list-item">7</li>
-          <li class="pagination__list-item">8</li>
-          <li class="pagination__list-item">9</li>
-          <li class="pagination__list-item">10</li>
-          <li class="pagination__list-item">11</li>
-          <li class="pagination__list-item">12</li>
-        </ul>
-      <div class="pagination__arrow pagination__arrow_right"></div>
-    </div>
-  </div>
+  <div id="root" class="wrapper"></div>
 </main>
+
+<script src="./index.js"></script>
 </body>
 </html>
 
