--- a/src/sass/blocks/_pagination.scss
+++ b/src/sass/blocks/_pagination.scss
@@ -41,9 +41,16 @@
     align-items: center;
     font-size: 14px;
     @include circle;
-    &:first-child {
-      background: $main-color;
-      color: #fff;
+    a {
+      text-decoration: none;
+      color: #2C2C2C;
     }
+  }
+}
+
+.active {
+  background: $main-color;
+  a {
+    color: #fff;
   }
 }
