--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper-1">
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
@@ -40,7 +40,7 @@
     </div>
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
@@ -69,7 +69,7 @@
     </div>
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
@@ -98,7 +98,7 @@
     </div>
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
@@ -127,7 +127,7 @@
     </div>  
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
@@ -156,7 +156,7 @@
     </div>  
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
@@ -185,7 +185,7 @@
     </div>  
     <div class="card-container col-m col-s">
       <div class="card">
-        <div class="item"></div>
+        <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
   
         <div class="item-content">
   
