--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,8 +1,12 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 .wrapper {
-    max-width: 400px;
     margin: 100px auto;
+    height: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
 .text {
@@ -14,6 +18,7 @@
 .card {
   display: flex;
   flex-direction: column;
+  max-width: 576px;
   width: 100%;
   margin: 0 auto;
   align-content: space-between;
