--- a/src/components/card/01-css-task/styles/style.css
+++ b/src/components/card/01-css-task/styles/style.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 317px;
+  max-width: 317px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 10px;
 }
