--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -7,9 +7,78 @@
 </head>
 <body>
 <main>
-  <div id="root">
-    <!-- Cart component -->
-  </div>
-</main>
-</body>
+      <div id="root" class="cart">
+        <div class="close">
+          <i class="bi bi-x-lg"></i>
+        </div>
+        <div class="cart-list">
+          <div class="cart-component">
+            <div class="preview-img"><img
+              src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg"
+              alt="notebook"
+            /></div>
+            <div class="description">
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </class=></div>
+            <div class="quantity">
+              <div><i class="bi bi-dash-circle"></i></div>
+              <div class="quantity-number">3</div>
+              <div><i class="bi bi-plus-circle"></i></div>
+            </div>
+            <div class="price">25600</div>
+          </div>
+          <div class="cart-component">
+            <div class="preview-img"><img
+              src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg"
+              alt="notebook"
+            /></div>
+            <div class="description">
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </class=></div>
+            <div class="quantity">
+              <div><i class="bi bi-dash-circle"></i></div>
+              <div class="quantity-number">3</div>
+              <div><i class="bi bi-plus-circle"></i></div>
+            </div>
+            <div class="price">25600</div>
+          </div>
+          <div class="cart-component">
+            <div class="preview-img"><img
+              src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg"
+              alt="notebook"
+            /></div>
+            <div class="description">
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </class=></div>
+            <div class="quantity">
+              <div><i class="bi bi-dash-circle"></i></div>
+              <div class="quantity-number">3</div>
+              <div><i class="bi bi-plus-circle"></i></div>
+            </div>
+            <div class="price">25600</div>
+          </div>
+          <div class="cart-component">
+            <div class="preview-img"><img
+              src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg"
+              alt="notebook"
+            /></div>
+            <div class="description">
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </class=></div>
+            <div class="quantity">
+              <div><i class="bi bi-dash-circle"></i></div>
+              <div class="quantity-number">3</div>
+              <div><i class="bi bi-plus-circle"></i></div>
+            </div>
+            <div class="price">25600</div>
+          </div>
+          <div class="cart-component"></div>
+        </div>
+        <!-- <div class="footer"> -->
+        <div class="total-price">Total: 160175</div>
+        <button class="order-button">ORDER</button>
+      <!-- </div> -->
+      </div>
+    </main>
+  </body>
 </html>
