--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Cart component</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<main>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Cart component</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
       <div id="root" class="cart">
         <div class="close">
           <i class="bi bi-x-lg"></i>
@@ -74,10 +78,10 @@
           </div>
           <div class="cart-component"></div>
         </div>
-        <!-- <div class="footer"> -->
+        <div class="footer">
         <div class="total-price">Total: 160175</div>
         <button class="order-button">ORDER</button>
-      <!-- </div> -->
+      </div>
       </div>
     </main>
   </body>
