--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -16,6 +16,15 @@
 <main>
   <div class="wrapper">
     <!-- DoubleSlider component -->
+    <div class="slidecontainer">
+      <div class="price">
+        <div>100</div>
+        <div>200
+        </div>
+      </div>
+      <input type="range" min="100" max="200" value="50" class="slider" id="myRange">
+
+    </div>
   </div>
 </main>
 </body>
