--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -6,16 +6,41 @@
   <link rel="stylesheet" href="style.css">
 
   <style>
-    .wrapper {
+    /* .wrapper {
       width: 400px;
       margin: 100px auto;
-    }
+    } */
   </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- FiltersList component -->
+    <h2>Category</h2>
+    <div class="container">
+      <div class="filter-category">
+        <div class="checkboxes">
+          <input type="checkbox" class="checkbox" id="checkbox_1">
+        </div>
+        <div class="category-name">Cell fone
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="wrapper row">
+    <h2 class="category_header col-12">Category</h2>
+    <div class="row">
+      <div class="checkboxes col-12">
+        <input type="checkbox" class="checkbox" id="checkbox_1">
+        <label class="label" for="checkbox_1">Cell phones</label>
+      </div>
+
+      <div class="checkboxes col-12">
+        <input type="checkbox" class="checkbox" id="checkbox_2">
+        <label class="label" for="checkbox_2">Computers & Tables</label>
+      </div>
+    </div>
   </div>
 </main>
 </body>
