--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -17,7 +17,10 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
-  </div>
+    <form action="" method="post">
+      <input type="search" placeholder="Search">
+    </form>
+   </div>
 </main>
 </body>
 </html>
