--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,61 @@
-/* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+body {
+  margin: 0;
+  padding: 0;
+  background-color: aquamarine;
+}
+
+.cart {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.close {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
+}
+
+.cart-component {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 20px 20px 0;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 5px 10px;
+  
+}
+
+.quantity {
+  display: flex;
+}
+
+.quantity-number {
+  margin: 0 10px;
+}
+
+img {
+  max-height: 40px;
+  width: 100%;
+}
+
+.total-price {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.order-button {
+  display: flex;
+  justify-content: center;
+  background-color: #7e72f2;
+  color: #fff;
+  margin: 0 auto;
+  width: 200px;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+}
