--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,96 @@
-/* put your styles in this file */
+h2 {
+  padding-left: 20px;
+}
+
+.filter-category {
+  display: flex;
+  padding-left: 20px;
+
+}
+
+input[type="checkbox" i] {
+  background-color: blueviolet;
+}
+
+
+.wrapper {
+  position: relative;
+  width: 250px;
+  margin: 100px auto;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  }
+
+.checkboxes {
+  padding-left: 20px;
+  padding-bottom: 5px;
+  font-size: 18px;
+  position: relative;
+}
+
+.checkbox {
+  -webkit-appearance: none;
+  appearance: none;
+  position: absolute;
+}
+
+.label {
+  font-size: 1rem;
+  padding-left: 25px;
+  cursor: pointer;
+}
+
+.label::before{
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+
+  border: 1px solid rgb(84, 84, 84);
+  background-color: #fff;
+  border-radius: 3px;
+
+  position: absolute;
+  top: 0px;
+  left: 15px;
+  z-index: 1;
+
+  transition: background .1s linear, border .1s linear;
+}
+
+.label::after{
+  content: "✓";
+  color: #fff;
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  background-size: 13px 13px;
+  opacity: 0;
+  position: absolute;
+  top: 0px;
+  left: 18px;
+  z-index: 2;
+  transition: opacity .1s linear;
+}
+
+.checkbox:checked + .label::before{
+  background-color: #7E72F2;
+  border-color: #7E72F2;
+}
+
+.checkbox:checked + .label::after{
+  opacity: 1;
+}
+
+.row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.col-12 {
+  width: calc(100% / 12 * 12);
+}
