--- a/components/card/index.html
+++ b/components/card/index.html
@@ -16,9 +16,9 @@
 <body>
 <main>
   <div class="wrapper">
-    <div class="card-img">
-      <img src="../../components/card/163399632.jpg"alt="Laptop-photo">
-    </div>
+
+    <img class="card-img"  src="../../components/card/163399632.jpg"alt="Laptop-photo">
+
     <div class="card-rating">
       <div class="card-rating-number">1.23<img src="../../components/card/Star 1 (Stroke).svg"alt="star"/></div>
       <div class="card-price">15999</div>
